[SYNCOPE-160] Refactoring ClientAppService