@@ -7,7 +7,7 @@
  * "License"); you may not use this file except in compliance
  * with the License.  You may obtain a copy of the License at
  *
- *    http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
@@ -16,29 +16,27 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.apache.syncope.wa.starter.rest;
 
+import java.util.Collection;
+import java.util.List;
+import org.apache.syncope.wa.WARestClient;
 import org.apereo.cas.services.AbstractServiceRegistry;
 import org.apereo.cas.services.RegisteredService;
 import org.apereo.cas.services.ServiceRegistryListener;
-
-import org.apache.syncope.wa.WARestClient;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.ConfigurableApplicationContext;
 
-import java.util.Collection;
-import java.util.Collections;
-
 public class SyncopeServiceRegistry extends AbstractServiceRegistry {
+
     private static final Logger LOG = LoggerFactory.getLogger(SyncopeServiceRegistry.class);
 
     private final WARestClient restClient;
 
     public SyncopeServiceRegistry(final WARestClient restClient,
-                                  final ConfigurableApplicationContext applicationContext,
-                                  final Collection<ServiceRegistryListener> serviceRegistryListeners) {
+            final ConfigurableApplicationContext applicationContext,
+            final Collection<ServiceRegistryListener> serviceRegistryListeners) {
         super(applicationContext, serviceRegistryListeners);
         this.restClient = restClient;
     }
@@ -56,7 +54,7 @@ public class SyncopeServiceRegistry extends AbstractServiceRegistry {
     @Override
     public Collection<RegisteredService> load() {
         LOG.info("Loading application definitions");
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
